# workshop-from-zero-to-mlops

./: .env.example  .gitignore  .gitpod.Dockerfile  .gitpod.yml  1_Initial setting.ipynb  2_Local lakehouse with MinIO and Delta.ipynb  3_Data and ML pipelines with Kedro.ipynb  README.md  docker-compose.yaml  pyproject.toml  requirements.in  requirements.txt  submissions.pq
conf/: logging.yml
conf/base/: catalog.yml  parameters_data_processing.yml  parameters_training.yml
conf/demo/: credentials.yml  mlflow.yml
img/: kedro-mlops.excalidraw
solutions/: ex01_kedro_pipeline.py
src/reddit_a_predictor/: pipeline_registry.py  settings.py
src/reddit_a_predictor/datasets/: __init__.py  polars_delta_dataset.py
src/reddit_a_predictor/pipelines/data_processing/: __init__.py  nodes.py  pipeline.py
src/reddit_a_predictor/pipelines/training/: __init__.py  nodes.py  pipeline.py
tests/pipelines/data_processing/: test_pipeline.py
tests/pipelines/training/: test_pipeline.py
