[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "reddit_a_predictor"
version = "0.1.0"
description = "Predictor for nasty Reddit stories"
authors = [
    {name = "Juan Luis Cano Rodríguez", email = "juan_luis_cano@mckinsey.com"},
]
dependencies = [
    "kedro-datasets[polars,huggingface]==3.0.1",
    "kedro-mlflow",
    "kedro==0.19.6",
    "mlflow>=2",  # Undeclared lower version cap of kedro-mlflow
    "nltk",
    "polars[deltalake]~=1.0.0",
    "praw",
    "pydantic",
    "s3fs",
    "scikit-learn",
    "setuptools",  # Undeclared dependency of kedro-mlflow
]
requires-python = ">=3.11"
readme = "README.md"

[tool.pdm]
distribution = true

[tool.kedro]
project_name = "reddit_a_predictor"
package_name = "reddit_a_predictor"
kedro_init_version = "0.19.6"

[tool.ruff]
show-fixes = true

[tool.ruff.lint]
select = [
    "F",  # Pyflakes
    "E",  # Pycodestyle
    "W",  # Pycodestyle
    "UP",  # pyupgrade
    "I",  # isort
    "PL",  # Pylint
]
ignore = ["PLR0913"]
